@@ -87,6 +87,7 @@
     <string name="theme">Motyw</string>
     <string name="light">Jasny</string>
     <string name="dark">Ciemny</string>
+    <string name="black">Black</string>
 
     <!-- permissions -->
     <string name="permissions">Permissions</string>
