@@ -87,6 +87,7 @@
     <string name="theme">Tema</string>
     <string name="light">Claro</string>
     <string name="dark">Escuro</string>
+    <string name="black">Black</string>
 
     <!-- permissions -->
     <string name="permissions">Permissões</string>
