@@ -81,6 +81,7 @@
     <string name="theme">Тема</string>
     <string name="light">Светлая</string>
     <string name="dark">Тёмная</string>
+    <string name="black">Black</string>
 
     <!-- permissions -->
     <string name="permissions">Разрешения</string>
