@@ -87,6 +87,7 @@
     <string name="theme">ธีม</string>
     <string name="light">สว่าง</string>
     <string name="dark">มืด</string>
+    <string name="black">Black</string>
 
     <!-- permissions -->
     <string name="permissions">การอนุญาต</string>
