@@ -28,10 +28,12 @@
     <string-array name="themes">
         <item>@string/light</item>
         <item>@string/dark</item>
+        <item>@string/black</item>
     </string-array>
     <string-array name="appearance_types_values" translatable="false">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
 </resources>
