@@ -2,10 +2,19 @@
 <resources>
 
     <color name="gray">#aaa</color>
+
+    <!-- ligth theme -->
     <color name="white">#ffffff</color>
-    <color name="darkgray">#444444</color>
     <color name="holo_light_window_background">#F0F0F0</color>
+
+    <!-- dark theme -->
+    <color name="darkgray">#444444</color>
     <color name="holo_dark_window_background">#353535</color>
     <color name="holo_dark_actionbar_background">#262626</color>
+
+    <!-- black theme -->
+    <color name="blackgray">#202020</color>
+    <color name="holo_black_window_background">#070707</color>
+    <color name="holo_black_actionbar_background">#000000</color>
 
 </resources>
