@@ -44,9 +44,36 @@
         <item name="action_share">@drawable/holo_dark_action_share</item>
     </style>
 
+    <style name="ThemeBlack" parent="android:Theme.Holo">
+        <item name="themeId">3</item>
+        <item name="android:windowBackground">@color/holo_black_window_background</item>
+        <item name="bookmark_windoBackground">@color/blackgray</item>
+        <item name="android:actionBarStyle">@style/actionBarStyleBlack</item>
+        <item name="ic_drawer">@drawable/holo_dark_ic_drawer</item>
+        <item name="action_copy">@drawable/holo_dark_action_copy</item>
+        <item name="action_cut">@drawable/holo_dark_action_cut</item>
+        <item name="action_edit">@drawable/holo_dark_action_edit</item>
+        <item name="action_info">@drawable/holo_dark_action_info</item>
+        <item name="action_paste">@drawable/actionpaste</item>
+        <item name="action_create_file">@drawable/holo_dark_ic_menu_file_new</item>
+        <item name="action_create_folder">@drawable/holo_dark_ic_menu_folder_new</item>
+        <item name="action_multi">@drawable/holo_dark_ic_action_select_all</item>
+        <item name="action_zip">@drawable/holo_dark_ic_storage</item>
+        <item name="action_bookmark">@drawable/holo_dark_ic_bookmark</item>
+        <item name="action_delete">@drawable/holo_dark_action_delete</item>
+        <item name="action_remove">@drawable/holo_dark_action_remove</item>
+        <item name="action_search">@drawable/holo_dark_action_search</item>
+        <item name="action_share">@drawable/holo_dark_action_share</item>
+    </style>
+
     <style name="actionBarStyleDark" parent="@android:style/Widget.ActionBar">
         <item name="android:background">@color/holo_dark_actionbar_background</item>
         <item name="android:backgroundSplit">@color/holo_dark_actionbar_background</item>
+    </style>
+
+    <style name="actionBarStyleBlack" parent="@android:style/Widget.ActionBar">
+        <item name="android:background">@color/holo_black_actionbar_background</item>
+        <item name="android:backgroundSplit">@color/holo_black_actionbar_background</item>
     </style>
 
 </resources>
