@@ -30,6 +30,7 @@ public final class SimpleExplorer extends Application {
 
 	public static final int THEME_ID_LIGHT = 1;
 	public static final int THEME_ID_DARK = 2;
+	public static final int THEME_ID_BLACK = 3;
 
 	@Override
 	public void onCreate() {
