@@ -1,4 +1,8 @@
 Changelog:
+==> next version
+black theme
+improvements
+
 2.0.5
 bug fixes
 added bulgarian language
